tooltip spacing fix

--- a/css/inner/add-projects.less
+++ b/css/inner/add-projects.less
@@ -126,7 +126,7 @@
   }
 }
 .add-orgs, .add-collabs, .add-you {
-  display: block;
+  display: inline-block;
   .box-sizing(border-box);
   text-overflow: ellipsis;
   white-space: nowrap;
